--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,12 @@
-.header__logo {
-    margin: 0 0 41px;
+@media (min-width: 670px) {
+    .header__logo {
+        margin: 0 0 35px;
+    }
+}
+
+@media (max-width: 669px) {
+    .header__logo {
+        margin: 0 0 25px 27px;
+        width: 103px;
+    }
 }
