--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,26 @@
 .profile__add-button {
-    margin-left: auto;
-    max-width: 150px;
+    background-size: cover;
+    min-height: 50px;
+}
+
+.profile__add-button:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+@media (min-width: 670px) {
+    .profile__add-button {
+        margin: 36px 0 auto auto;
+        background-image: url(/images/Add\ Button.svg);
+        min-width: 150px;
+    }
+}
+
+@media (max-width: 669px) {
+    .profile__add-button {
+        
+        margin: 34px auto 0;
+        background-image: url(/images/Add_.svg);
+        width: 282px;
+    }
 }
