--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,12 @@
 .profile__avatar {
     border-radius: 50%;
-    max-width: 127px;
+    max-width: 120px;
+    height: 100%;
+    margin: 0;
+}
+
+@media (max-width: 669px) {
+    .profile__avatar {
+        margin: 0 auto 0;
+    }
 }
