--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,19 @@
 .profile__edit-button {
     max-width: 24px;
-    margin-left: 18px;
+    margin-left: 16px;
+    margin-bottom: auto;
+}
+
+.profile__edit-button:hover {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+@media (max-width: 320px) {
+    .profile__edit-button {
+        position: absolute;
+        right: 38px;
+        top: 280px;
+        width: 18px;
+    }
 }
