--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,8 +1,21 @@
 .profile__name {
-    margin: 0;
-    margin-right: 180px;
-    font-size: 42px;
-    line-height: 1.14;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 400;
+}
+
+@media (min-width: 670px) {
+    .profile__name {
+        margin: 0 0 10px;
+        font-size: 43px;
+        line-height: 1.14;
+    }
+}
+
+@media (max-width: 669px) {
+    .profile__name {
+        margin: 0 auto 7px;
+        font-size: 27px;
+        line-height: 33px;
+        text-align: center;
+    }
 }
