--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,12 @@
 .profile {
     max-width: 880px;
-    margin: 40px auto 0;
+    margin: 43px auto 0;
     color: #FFFFFF;
     display: flex;
+}
+
+@media (max-width: 669px) {
+    .profile {
+        flex-direction: column;
+    }
 }
