--- a/blocks/popup/__name/popup__name.css
+++ b/blocks/popup/__name/popup__name.css
@@ -3,19 +3,21 @@
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 15px;
     margin-left: 36px;
     border-bottom: 1px solid #000000;
-    width: 358px;
+    width: 354px;
     padding-bottom: 10px;
     margin-top: 28px;
+    border: 0;
+    border-bottom: 1px solid #000000;
 }
 
 @media (max-width: 669px) {
     .popup__name {
         font-size: 14px;
-        line-height: 17px;
-        width: 238px;
+        line-height: 15px;
+        width: 235px;
         margin-left: 22px;
         margin-top: 60px;
         padding-bottom: 8px;
