--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -3,6 +3,8 @@
     height: 19px;
     background-image: url(../../../images/like.svg);
     margin-top: 20px;
+    background-color: transparent;
+    border: 0;
 }
 
 .element__like:hover {
