--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -3,4 +3,8 @@
     font-style:  normal;
     font-weight: 900;
     font-size: 25px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin: 15px 0 0;
 }
