--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -2,9 +2,9 @@
     max-width: 880px;
     margin: 51px auto 0;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    grid-template-columns: repeat(auto-fit, 282px);
     gap: 20px 16px;
-    justify-content: space-between;
+    justify-content: center;
     justify-items: center;
 }
 
