--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,8 +1,10 @@
 .popup__close-button {
     background: transparent;
+    background-image: url(../../../images/Close_Icon.svg);
     border: 0;
     position: absolute;
     width: 32px;
+    height: 32px;
     right: -34px;
     top: -41px;
 }
