--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,7 +1,12 @@
 .profile__edit-button {
-    max-width: 24px;
+    width: 24px;
+    height: 24px;
+    background-image: url(../../../images/Edit_Button.svg);
     margin-left: 16px;
     margin-bottom: auto;
+    background-color: transparent;
+    background-size: cover;
+    border: 0;
 }
 
 .profile__edit-button:hover {
@@ -15,5 +20,6 @@
         right: 38px;
         top: 280px;
         width: 18px;
+        height: 18px;
     }
 }
