--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -4,6 +4,9 @@
     line-height: 22px;
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-weight: 400;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media (max-width: 669px) {
