--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -11,6 +11,7 @@
         margin: 0 0 10px;
         font-size: 43px;
         line-height: 1.14;
+        max-width: 300px;
     }
 }
 
@@ -20,5 +21,6 @@
         font-size: 27px;
         line-height: 33px;
         text-align: center;
+        max-width: 190px;
     }
 }
