--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -7,6 +7,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    max-width: 300px;
 }
 
 @media (max-width: 669px) {
@@ -14,5 +15,6 @@
         font-size: 14px;
         line-height: 17px;
         text-align: center;
+        max-width: 190px;
     }
 }
