--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,8 @@
     width: 24px;
     height: 24px;
     background-image: url(../../../images/Edit_Button.svg);
-    margin-left: 16px;
+    margin-left: -7px;
+    margin-top: 35px;
     margin-bottom: auto;
     background-color: transparent;
     background-size: cover;
@@ -14,11 +15,17 @@
     cursor: pointer;
 }
 
+@media (min-width: 321px) and (max-width: 669px) {
+    .profile__edit-button {
+        margin: 20px auto 20px;
+    }
+}
+
 @media (max-width: 320px) {
     .profile__edit-button {
         position: absolute;
         right: 38px;
-        top: 280px;
+        top: 245px;
         width: 18px;
         height: 18px;
     }
