--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,7 +13,7 @@
 @media (min-width: 670px) {
     .profile__add-button {
         margin: 33px 0 auto auto;
-        background-image: url(../../../images/Add\ Button.svg);
+        background-image: url(../../../images/Add_Button.svg);
         min-width: 150px;
     }
 }
