--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__title/element__title.css);
@@ -31,3 +32,11 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
+
+@import url(../blocks/place-overlay/place-overlay.css);
+@import url(../blocks/place-overlay/_open/place-overlay_open.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__close-button/place__close-button.css);
+@import url(../blocks/place/__input/place__input.css);
+@import url(../blocks/place/__add-button/place__add-button.css);
+@import url(../blocks/place/__title/place__title.css);
