--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    transition: all 500ms ease;
 }
 
 @media (min-width: 670px) {
