--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,10 @@
 .element__image {
-    max-width: 282px;
+    width: 282px;
+    height: 282px;
     border-radius: 0;
     margin: 0;
+}
+
+.element__image:hover {
+    cursor: pointer;
 }
