--- a/blocks/img-form/__title/img-form__title.css
+++ b/blocks/img-form/__title/img-form__title.css
@@ -7,3 +7,11 @@
     font-size: 12px;
     line-height: 15px;
 }
+
+@media (max-width: 669px) {
+    .img-form__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin: 10px 0 0;
+    }
+}
