--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -2,7 +2,7 @@
     width: 358px;
     height: 50px;
     background-color: #000;
-    margin: 49px auto 0;
+    margin: auto auto 10px;
     color: #fff;
     font-family: 'Inter';
     font-style: normal;
