--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,10 +1,10 @@
-.place__input {
+.form__input {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 15px;
-    margin-left: 36px;
+    margin-left: 24px;
     padding-bottom: 10px;
     margin-top: 28px;
     border: 0;
@@ -15,15 +15,15 @@
 
    
 @media (max-width: 669px) {
-   .place__input {
+   .form__input {
        font-size: 14px;
        line-height: 15px;
        width: 235px;
-       margin-left: 22px;
+       margin-left: 8px;
        margin-top: 60px;
        padding-bottom: 8px;
    }
-   .place__input:last-of-type {
+   .form__input:last-of-type {
        margin-top: 33px;
    }
 }
