--- a/blocks/place/__add-button/place__add-button.css
+++ b/blocks/place/__add-button/place__add-button.css
@@ -1,8 +1,8 @@
 .place__add-button {
     width: 358px;
-    height: 50px;
+    min-height: 50px;
     background-color: #000;
-    margin: 49px auto 0;
+    margin: auto auto 10px;
     color: #fff;
     font-family: 'Inter';
     font-style: normal;
