--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,14 +1,15 @@
 .popup__save-button {
     width: 358px;
-    height: 50px;
+    min-height: 50px;
     background-color: #000;
-    margin: 49px auto 0;
+    margin: auto auto 10px;
     color: #fff;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    
 }
 
 .popup__save-button:hover {
