--- a/blocks/form/__input-error/form__input-error.css
+++ b/blocks/form/__input-error/form__input-error.css
@@ -1,5 +1,5 @@
 .form__input-error {
-    margin: 0 auto 0 24px;
+    margin: 0 36px 0 24px;
     padding: 0;
     color: #ff3333;
     font-size: 0.8rem;
@@ -10,6 +10,7 @@
 
   @media (max-width: 669px) {
     .form__input-error {
-        margin: 0 8px 0 8px;
-  }
+      line-height: 12px;
+        margin-left: 4px;
+    }
 }
