--- a/blocks/form/__set/form__set.css
+++ b/blocks/form/__set/form__set.css
@@ -1,5 +1,5 @@
 .form__set {
-    border: 0;
+    border: 0 none;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -8,14 +8,14 @@
 
 @media (min-width: 670px) {
     .form__set {
-        width: 400px;
-        height: 100%;
+        width: 402px;
+        height: 310px;
     }
 }
 
 @media (max-width: 669px) {
     .form__set {
-        width: 252px;
-        height: 100%;
+        width: 230px;
+        height: 302px;
     }
 }
