--- a/blocks/button/_inactive/button_inactive.css
+++ b/blocks/button/_inactive/button_inactive.css
@@ -1,6 +1,10 @@
-.button_inactive:disabled,
-.button_inactive[disabled]{
+.button_inactive{
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+}
+
+.button_inactive:hover {
+  cursor: default;
+  opacity: 1;
 }
