--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,7 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__set/popup__set.css);
+@import url(../blocks/popup/__form/popup__form.css);
 
 @import url(../blocks/form/__input-error/form__input-error.css);
 @import url(../blocks/form/__input-error/_active/form__input-error_active.css);
