--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.form_input {
+.popup__input {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -15,7 +15,7 @@
 
    
 @media (max-width: 669px) {
-   .form_input {
+   .popup__input {
        font-size: 14px;
        line-height: 15px;
        width: 235px;
@@ -23,7 +23,7 @@
        margin-top: 60px;
        padding-bottom: 8px;
    }
-   .form_input:last-of-type {
+   .popup__input:last-of-type {
        margin-top: 33px;
    }
 }
