--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -1,4 +1,4 @@
-.form__input-error {
+.popup__input-error {
     margin: 0 36px 0 24px;
     padding: 0;
     color: #ff3333;
@@ -9,7 +9,7 @@
   }
 
   @media (max-width: 669px) {
-    .form__input-error {
+    .popup__input-error {
       line-height: 12px;
         margin-left: 4px;
     }
