--- a/blocks/element/__like/_active/element__like_active.css
+++ b/blocks/element/__like/_active/element__like_active.css
@@ -1,10 +1,14 @@
 .element__like_active {
     width: 25px;
+    height: 25px;
+    top: 20px;
+    left: auto;
+    right: 1px;
     background-repeat: no-repeat;
     background-image: url(../../../../images/Union.png);
-    margin-top: 20px;
     background-color: transparent;
     border: 0;
+    position: absolute;
 }
 
 .element__like_active:hover {
