--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -3,8 +3,10 @@
     font-style:  normal;
     font-weight: 900;
     font-size: 25px;
+    max-width: 225px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
     margin: 15px 0 0;
+    border: 0;
 }
