--- a/blocks/overlay/overlay_popup.css
+++ b/blocks/overlay/overlay_popup.css
@@ -1,11 +1,11 @@
-.overlay {
+.overlay_popup {
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     display: flex;
     top: 0px;
     transition: all 0.3s ease;
-	opacity: 0;
-	visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
 }
