--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -10,20 +10,25 @@
     border: 0;
     border-bottom: 1px solid #000000;
     width: 350px;
+    display: block;
 }
 
+.popup__input:last-of-type {
+    position: absolute;
+    top: 155px;
+}
 
-   
 @media (max-width: 669px) {
-   .popup__input {
-       font-size: 14px;
-       line-height: 15px;
-       width: 235px;
-       margin-left: 1px;
-       margin-top: 60px;
-       padding-bottom: 8px;
-   }
-   .popup__input:last-of-type {
-       margin-top: 33px;
-   }
+    .popup__input {
+        font-size: 14px;
+        line-height: 15px;
+        width: 235px;
+        margin-left: 1px;
+        margin-top: 60px;
+        padding-bottom: 8px;
+    }
+
+    .popup__input:last-of-type {
+        margin-top: 33px;
+    }
 }
