--- a/blocks/place/__add-button/place__add-button.css
+++ b/blocks/place/__add-button/place__add-button.css
@@ -1,14 +1,15 @@
-.place__add-button {
+.place__add-button { 
     width: 358px;
     height: 50px;
     background-color: #000;
-    margin: 49px auto 0;
+    margin: auto auto 10px;
     color: #fff;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+    display: block;
 }
 
 .place__add-button:hover {
@@ -20,8 +21,9 @@
     .place__add-button {
         width: 238px;
         height: 46px;
-        margin-top: 44px;
-        font-size: 14px;
-        line-height: 17px;
+        margin-top: auto;
+        margin-bottom: 20px;
+        padding: 0;
+        display: block;
     }
 }
