--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -9,7 +9,11 @@
   display: block;
 }
 
-.popup__input-error:last-of-type {
+.popup__input-error:nth-of-type(1) {
+  margin: 0 36px 0 24px;
+}
+
+.popup__input-error:nth-of-type(2) {
   position: absolute;
   top: 210px;
 }
@@ -17,11 +21,15 @@
 @media (max-width: 669px) {
   .popup__input-error {
     line-height: 12px;
-    margin-left: 4px;
   }
 
-  .popup__input-error:last-of-type {
+  .popup__input-error:nth-of-type(1) {
+    margin: 0 36px 0 4px;
+  }
+
+  .popup__input-error:nth-of-type(2) {
     position: absolute;
     top: 215px;
+    left: -8px
   }
 }
