--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,20 @@
 .profile__avatar {
     border-radius: 50%;
-    max-width: 120px;
-    height: 100%;
+    width: 120px;
+    height: 120px;
     margin: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+}
+
+.profile__avatar:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.profile__avatar:hover .profile__avatar__pen {
+    opacity: 1;
 }
 
 @media (max-width: 669px) {
