--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar/__pen/profile__avatar__pen.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
@@ -19,6 +20,7 @@
 @import url(../blocks/element/__delete/element__delete.css);
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__number/element__number.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__container-bottom/element__container-bottom.css);
@@ -26,6 +28,8 @@
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 
+@import url(../blocks/overlay/overlay_avatar.css);
+@import url(../blocks/overlay/overlay_ask.css);
 @import url(../blocks/overlay/overlay_img.css);
 @import url(../blocks/overlay/overlay_place.css);
 @import url(../blocks/overlay/overlay_popup.css);
@@ -50,6 +54,19 @@
 @import url(../blocks/img-form/__picture/img-form__picture.css);
 @import url(../blocks/img-form/__title/img-form__title.css);
 
+@import url(../blocks/ask/ask.css);
+@import url(../blocks/ask/__button/ask__button.css);
+@import url(../blocks/ask/__close-button/ask__close-button.css);
+@import url(../blocks/ask/__set/ask__set.css);
+@import url(../blocks/ask/__title/ask__title.css);
+
+@import url(../blocks/avatar/avatar.css);
+@import url(../blocks/avatar/__title/avatar__title.css);
+@import url(../blocks/avatar/__input/__input-error/avatar__input-error.css);
+@import url(../blocks/avatar/__set/avatar__set.css);
+@import url(../blocks/avatar/__input/avatar__input.css);
+@import url(../blocks/avatar/__close-button/avatar__close-button.css);
+@import url(../blocks/avatar/__button/avatar__button.css);
 
 
 @import url(../blocks/button/_inactive/button_inactive.css);
