--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -13,7 +13,7 @@
     cursor: pointer;
 }
 
-.profile__avatar:hover .profile__avatar_pen {
+.profile__avatar:hover .profile__avatar-pen {
     opacity: 1;
 }
 
